...
    },
    "app.title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PartyGame"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PartyGame"
...
            "state" : "translated",
            "value" : "Kategoria"
          }
        }
      }
    },
    "common.back" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
...
            "state" : "translated",
            "value" : "Gra jest wstrzymana podczas ponownego łączenia ekranu Display."
          }
        }
      }
    },
    "game.started" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Game started!"
...
            "state" : "translated",
            "value" : "Niech zacznie się impreza"
          }
        }
      }
    },
    "host.create" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create room"
          }
...
            "state" : "translated",
            "value" : "niegotowy/a"
          }
        }
      }
    },
    "lobby.ready" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I'm ready"
          }
...
